manifests/link/link.yaml
apiVersion: v1
kind: Service
metadata:
  name: link
  namespace: link
  labels:
    app: link
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: web
    name: web
  selector:
    app: link
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: link
  namespace: link
  labels:
    app: link
  annotations:
    secret.reloader.stakater.com/reload: "urls-map"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: link
  template:
    metadata:
      labels:
        app: link
    spec:
      priorityClassName: critical
      containers:
      - name: web
        image: rg.fr-par.scw.cloud/averagemarcus/link:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5050
          name: web
        volumeMounts:
          - name: config
            mountPath: /config
      volumes:
        - name: config
          configMap:
            name: urls-map
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: link
  namespace: link
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - go-get.link
    secretName: link-ingress
  rules:
  - host: go-get.link
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: link
            port:
              number: 80
